virtualbox-ose (1.5.2-dfsg2-5) UNRELEASED; urgency=low

  [ Daniel Baumann ]
  * Upgrading virtualbox-ose-modules recommends to depends.
  * Downgrading virtualbox-ose-source recommends to suggests.
  * Bumping policy version, no other changes needed.

  [ Hilko Bengen ]
  * Added support for vditool to VBox.sh

 -- Hilko Bengen <bengen@debian.org>  Mon, 10 Dec 2007 16:33:16 +0100

virtualbox-ose (1.5.2-dfsg2-4) unstable; urgency=low

  [ Patrick Winnertz ]
  * Changed my maintainer address

  [ meskes@debian.org ]
  * Made virtualbox-ose-guest-source compile under linux-modules-extra.
  * Made virtualbox-ose-guest-modules i386 only.
  * Re-encoded copyright file in UTF-8.
  * Removed empty /usr/sbin directory in virtualbox-ose package.
  * Removed /usr/lib/virtualbox/VBox.png, doesn't seem to be needed.
  * Also removed override for this file.
  * Moved binary file xpidl from /usr/share back to /usr/lib.

 -- Michael Meskes <meskes@debian.org>  Thu, 06 Dec 2007 09:11:51 +0100

virtualbox-ose (1.5.2-dfsg2-3) unstable; urgency=low

  * Added patch to remove registration form, closes: #447626, #453784
  * Added just another patch to make sure module is build with the correct
    name when build by linux-modules-extra, closes: #453681, #454123
  * Patched Makefile for guest modules for the same reason.

 -- Michael Meskes <meskes@debian.org>  Sun, 02 Dec 2007 18:06:27 +0100

virtualbox-ose (1.5.2-dfsg2-2) unstable; urgency=low

  [ Michael Meskes ]
  * Removed superfluous build dependencies:
    - libqt3-mt-dev depends on zlib1g-dev and libxcursor-dev
    - libxalan110-dev depends on libxerces27-dev
    - bcc depends on bin86
  * Remove guest libs from debug package.
  * Call "invoke-rc.d udev reload" conditionally in modules postinst.
  * Do not call modprobe in postinst script, closes: #451743, #451742
  * Made grep command in vboxnet.sh be quiet, closes: #451741
  * Do not start guest utils if not inside the vm.