@@ -1,0 +1,4 @@
+usr/src/modules/virtualbox-ose-guest
+usr/src/modules/virtualbox-ose-guest/debian
+usr/src/modules/virtualbox-ose
+usr/src/modules/virtualbox-ose/debian
