@@ -1,6 +1,7 @@
-/usr/lib/xorg/modules/drivers
-/usr/lib/xorg/modules/input
-/usr/sbin
-/usr/bin
-/sbin
-/etc/X11/Xsession.d
+usr/lib/virtualbox
+usr/lib/xorg/modules/drivers
+usr/lib/xorg/modules/input
+usr/sbin
+usr/bin
+sbin
+etc/X11/Xsession.d
